# Thought-Anchors-In-Code-Research

./: .gitignore  README.md  analyze_causal_matrices.py  dataset_stats.py  download.py  pilot_experiment.py  plot_category_effects.py  plot_data_coverage.py  plot_sentence_count_distributions.py  prompt.py  pyproject.toml  response.json  run_causal_masking.sh  show_causal_examples.py
assets/rollouts/: humaneval_qwen3_5_0_8b_full.jsonl  mbpp_qwen3_5_0_8b_full.jsonl
notebooks/: causal_matrix_inspection.ipynb
results/: blackbox_resampling_humaneval_smoke.jsonl  humaneval_attention_review.html  labeled_humaneval_qwen3_5_0_8b_full.html  labeled_humaneval_qwen3_5_0_8b_full.jsonl  labeled_mbpp_qwen3_5_0_8b_full.html  labeled_mbpp_qwen3_5_0_8b_full.jsonl  mbpp_attention_review.html  receiver_head_summary.jsonl  receiver_head_summary_humaneval_qwen3_5_0_8b.jsonl  receiver_head_summary_mbpp_qwen3_5_0_8b.jsonl  sentence_labels_humaneval_qwen3_5_0_8b.jsonl
results/causal_matrices_humaneval_qwen3_5_0_8b/: HumanEval_104_s0.npz  HumanEval_112_s0.npz  HumanEval_117_s0.npz  HumanEval_11_s0.npz  HumanEval_121_s0.npz  HumanEval_12_s0.npz  HumanEval_13_s0.npz  HumanEval_143_s0.npz  HumanEval_144_s0.npz  HumanEval_150_s0.npz  HumanEval_152_s0.npz  HumanEval_15_s0.npz  HumanEval_16_s0.npz  HumanEval_18_s0.npz  HumanEval_23_s0.npz  HumanEval_24_s0.npz  HumanEval_29_s0.npz  HumanEval_2_s0.npz  HumanEval_30_s0.npz  HumanEval_31_s0.npz  HumanEval_34_s0.npz  HumanEval_35_s0.npz  HumanEval_36_s0.npz  HumanEval_37_s0.npz  HumanEval_3_s0.npz  HumanEval_40_s0.npz  HumanEval_42_s0.npz  HumanEval_4_s0.npz  HumanEval_51_s0.npz  HumanEval_52_s0.npz  HumanEval_53_s0.npz  HumanEval_58_s0.npz  HumanEval_60_s0.npz  HumanEval_61_s0.npz  (+7 more)
tests/: test_blackbox_resampling.py  test_config.py  test_data_loading.py  test_labeling.py  test_receiver_heads.py  test_rollouts.py  test_trace_utils.py  test_whitebox_masking.py
(+140 files in other folders)
