[project]
name = "thought-anchors-in-code-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "python-dotenv>=1.0.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "packaging>=26.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "tqdm>=4.67.3",
]
