[project]
name = "thought-anchors-in-code-research"
version = "0.1.0"
description = "Thought anchor analysis for code reasoning rollouts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=3.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "tqdm>=4.67.0",
    "protobuf>=7.34.0",
    "ipython>=9.13.0",
    "flash-linear-attention>=0.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/thought_anchors_code"]

[project.scripts]
receiver-head-analysis = "thought_anchors_code.analysis.whitebox_attention.cli:main"
collect-code-rollouts = "thought_anchors_code.rollouts.cli:main"
download-assets = "thought_anchors_code.setup.download:main"
plot-receiver-heads = "thought_anchors_code.analysis.whitebox_attention.plot_cli:main"
build-attention-review-ui = "thought_anchors_code.analysis.whitebox_attention.review_ui:main"
blackbox-resampling = "thought_anchors_code.analysis.blackbox_resampling.cli:main"
summarize-blackbox-resampling = "thought_anchors_code.analysis.blackbox_resampling.summarize:main"
